# health-monitor

./: .gitattributes  .gitignore  README.md  adafruit_listener.py  consumer.py  db.sqlite3  package-lock.json  package.json  pico_mqtt_consumer.py  pyproject.toml  requirements.txt  sensor_data.csv  try.py
data_management/: .gitattributes  admin.py  models.py  urls.py  views.py
data_management/assets/css/: admin_custom.css  styles.css
data_management/assets/js/: chart-scripts.js
data_management/migrations/: 0001_initial.py  0002_alter_microcontroller_identifier_alter_ward_name.py  0003_alter_microcontroller_ward_alter_patient_national_id.py  0004_wardreading_light_intensity.py  0005_alter_customuser_email.py
health_monitor/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
static/js/: chart-scripts.js
templates/data_management/: .htmx-check.html  index.html  patient.html  ward-details.html
templates/data_management/layout/: base.html  hero.html  navbar.html
templates/data_management/snippets/: .htmx-response.html  dashboard-stats.html  patient-vitals-charts.html  patient-vitals-status.html  ward-comparison.html  ward-conditions.html  ward-data.html  ward-patient-vitals.html  ward-status.html
