[project]
name = "health-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.0",
    "django>=5.2.8",
    "django-daisy==1.0.26",
    "paho-mqtt==2.1.0",
    "setuptools==78.1.1",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.15.0",
    "wheel==0.45.1",
]
